kuard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  selector:
    app: kuard
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
